card section added

--- a/index.html
+++ b/index.html
@@ -44,25 +44,36 @@
         <div class="card-container">
             <div class="card">
                 <div class="card-img">
-                    <img src="images/digital-marketing.jpg" alt="">
+                    <img src="images/digital-marketing.jpg" alt="ডিজিটাল মার্কেটিং">
                 </div>
                 <div class="card-text">
                     <a href="">সকল কোর্স</a>
                     <h3>ডিজিটাল মার্কেটিং</h3>
                     <h4>কোর্স ফি ৪০,০০০ ৳</h4>
-                    <button>Enrol now</button>
+                    <button>Enroll now</button>
                 </div>
             </div>
             <div class="card middle-card">
                 <div class="card-img">
-                    <img src="images/web-development.jpg" alt="">
+                    <img src="images/web-development.jpg" alt="ওয়েভ ডেভেলপমেন্ট">
                 </div>
-                
+                <div class="card-text">
+                    <a href="">সকল কোর্স</a>
+                    <h3>ওয়েভ ডেভেলপমেন্ট</h3>
+                    <h4>কোর্স ফি ৫০,০০০ ৳</h4>
+                    <button>Enroll now</button>
+                </div>
             </div>
             <div class="card">
                <div class="card-img">
-                <img src="images/mern-stack.jpg" alt="">
+                <img src="images/mern-stack.jpg" alt="মার্ন স্ট্যাক ডেভেলপমেন্ট">
                </div>
+               <div class="card-text">
+                <a href="">সকল কোর্স</a>
+                <h3>মার্ন স্ট্যাক ডেভেলপমেন্ট</h3>
+                <h4>কোর্স ফি ৬০,০০০ ৳</h4>
+                <button>Enroll now</button>
+            </div>
             </div>
         </div>
     </section>
