--- a/index.html
+++ b/index.html
@@ -77,6 +77,34 @@
             </div>
         </div>
     </section>
+    <!--  -->
+    <section class="container">
+        <div class="card-container">
+            <div class="card card-offer">
+                <div class="card-img">
+                    <img src="images/motion.jpg" alt="মোশন গ্রাফিক্স">
+                </div>
+                <div class="card-text">
+                    <a href="">সকল কোর্স</a>
+                    <h3>মোশন গ্রাফিক্স</h3>
+                    <h4>কোর্স ফি ৪০,০০০ ৳</h4>
+                    <button>Enroll now</button>
+                </div>
+            </div>
+            <div class="card card-offer">
+               <div class="card-img">
+                <img src="images/ux-ui.jpg" alt="UX/UI ডিজাইন">
+               </div>
+               <div class="card-text">
+                <a href="">সকল কোর্স</a>
+                <h3>UX/UI ডিজাইন</h3>
+                <h4>কোর্স ফি ৪০,০০০ ৳</h4>
+                <button>Enroll now</button>
+            </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
