--- a/index.html
+++ b/index.html
@@ -65,19 +65,19 @@
                 </div>
             </div>
             <div class="card">
-               <div class="card-img">
-                <img src="images/mern-stack.jpg" alt="মার্ন স্ট্যাক ডেভেলপমেন্ট">
-               </div>
-               <div class="card-text">
-                <a href="">সকল কোর্স</a>
-                <h3>মার্ন স্ট্যাক ডেভেলপমেন্ট</h3>
-                <h4>কোর্স ফি ৬০,০০০ ৳</h4>
-                <button>Enroll now</button>
-            </div>
+                <div class="card-img">
+                    <img src="images/mern-stack.jpg" alt="মার্ন স্ট্যাক ডেভেলপমেন্ট">
+                </div>
+                <div class="card-text">
+                    <a href="">সকল কোর্স</a>
+                    <h3>মার্ন স্ট্যাক ডেভেলপমেন্ট</h3>
+                    <h4>কোর্স ফি ৬০,০০০ ৳</h4>
+                    <button>Enroll now</button>
+                </div>
             </div>
         </div>
     </section>
-    <!--  -->
+    <!-- Offer section start -->
     <section class="container">
         <div class="card-container">
             <div class="card card-offer">
@@ -90,19 +90,37 @@
                     <h4>কোর্স ফি ৪০,০০০ ৳</h4>
                     <button>Enroll now</button>
                 </div>
+                <div class="discount-section">
+                    <div class="discount-text">
+                        <h3>৬০% ডিসকাউন্ট</h3>
+                    </div>
+                </div>
             </div>
             <div class="card card-offer">
-               <div class="card-img">
-                <img src="images/ux-ui.jpg" alt="UX/UI ডিজাইন">
-               </div>
-               <div class="card-text">
-                <a href="">সকল কোর্স</a>
-                <h3>UX/UI ডিজাইন</h3>
-                <h4>কোর্স ফি ৪০,০০০ ৳</h4>
-                <button>Enroll now</button>
-            </div>
+                <div class="card-img">
+                    <img src="images/ux-ui.jpg" alt="UX/UI ডিজাইন">
+                </div>
+                <div class="card-text">
+                    <a href="">সকল কোর্স</a>
+                    <h3>UX/UI ডিজাইন</h3>
+                    <h4>কোর্স ফি ৪০,০০০ ৳</h4>
+                    <button>Enroll now</button>
+                </div>
+                <div class="discount-section">
+                    <div class="discount-text">
+                        <h3>৪০% ডিসকাউন্ট</h3>
+                    </div>
+                </div>
             </div>
         </div>
+    </section>
+    <!-- Footer section start -->
+    <section class="container">
+        <footer>
+            <div class="footer-container">
+                <h2>Copyright &copy; solayman khan 2022</h2>
+            </div>
+        </footer>
     </section>
 
 </body>
