dropdown menu add

--- a/index.html
+++ b/index.html
@@ -19,11 +19,24 @@
                 </div>
                 <div class="header-menu">
                     <ul>
-                        <li><a href="">হোম</a></li>
-                        <li><a href="">আমাদের সম্পর্কে</a></li>
-                        <li><a href="">সাফল্যের গল্প</a></li>
-                        <li><a href="">ফ্রিল্যান্সিং</a></li>
-                        <li><a href="">যোগাযোগ</a></li>
+                        <li><a href="#">হোম</a></li>
+                        <li><a href="#">ফ্রিল্যান্সিং কোর্সসমূহ</a>
+                        <ul>
+                            <li><a href="#"> ডিজাইন এন্ড মাল্টিমিডিয়া </a></li>
+                            <li><a href="#"> ওয়েভ এন্ড সফটওয়্যার </a></li>
+                            <li><a href="#"> ডিজাইন মার্কেটিং </a>
+                                <ul>
+                                    <li><a href="#">এফিলিয়েট মার্কেটিং</a></li>
+                                    <li><a href="#">গুগল এডসেন্স</a></li>
+                                    <li><a href="#">এসইও মার্কেটিং</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#"> নেটওয়ার্কিং </a></li>
+                        </ul>
+                        </li>
+                        <li><a href="#">সাফল্যের গল্প</a></li>
+                        <li><a href="#">আমাদের সম্পর্কে</a></li>
+                        <li><a href="#">যোগাযোগ</a></li>
                     </ul>
                 </div>
             </div>
